Addd a prior predictive check and summary of posterior probabilities.

--- a/Meta Analysis/bayesian.bib
+++ b/Meta Analysis/bayesian.bib
@@ -87,3 +87,23 @@
     encoding = {UTF-8},
   }
 
+  @misc{baseR,
+  title = {R: {{A Language}} and {{Environment}} for {{Statistical Computing}}},
+  author = {{R Core Team}},
+  year = {2019},
+  publisher = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  urldate = {2010-10-22},
+  keywords = {R,statistics}
+}
+
+@book{leeBayesianCognitiveModeling2014,
+  title = {Bayesian {{Cognitive Modeling}}: {{A Practical Course}}},
+  author = {Lee, Michael D. and Wagenmakers, Eric-Jan},
+  year = {2014},
+  month = apr,
+  isbn = {978-1-107-65391-7 1-107-65391-6}
+}
+
+
+
