--- a/Mouse Genetics/Cholesterol/WGCNA/Liver-WGCNA-Construction.Qmd
+++ b/Mouse Genetics/Cholesterol/WGCNA/Liver-WGCNA-Construction.Qmd
@@ -2,38 +2,41 @@
 title: "WGCNA Analysis of DO Livers"
 subtitle: "Construction of Modules"
 author: "Dave Bridges"
-format: html
+date: "January 26, 2025"
+editor: source
+format: 
+  html:
+    toc: true
+    toc-location: right
+    keep-md: true
+    code-fold: true
+    code-summary: "Show the code"
+    fig-path: "figures/"
+  gfm:
+    html-math-method: webtex
+theme: journal
 execute:
-  keep-md: true
+  echo: true
+  warning: false
 ---
 
 ```{r global_options, include=FALSE}
 library(knitr)
-#figures makde will go to directory called figures, will make them as both png and pdf files 
-opts_chunk$set(fig.path='figures/',
-               echo=TRUE, warning=FALSE, message=FALSE,dev=c('png','pdf'))
-options(scipen = 2, digits = 3)
-# set echo and message to TRUE if you want to display code blocks and code output respectively
-
-knitr::knit_hooks$set(inline = function(x) {
-  knitr:::format_sci(x, 'md')
-})
-
-
+# Function to add error bars to plots
 superpose.eb <- function (x, y, ebl, ebu = ebl, length = 0.08, ...)
   arrows(x, y + ebu, x, y - ebl, angle = 90, code = 3,
   length = length, ...)
 
-  
+# Function to calculate standard error
 se <- function(x) sd(x, na.rm=T)/sqrt(length(x))
 
-#load these packages, nearly always needed
+# Load necessary packages
 library(tidyr)
 library(dplyr)
 library(readr)
 library(ggplot2)
 
-# sets maize and blue color scheme
+# Sets maize and blue color scheme
 color.scheme <- c('#00274c', '#ffcb05')
 ```
 
@@ -45,6 +48,7 @@ Followed instructions on https://horvath.genetics.ucla.edu/html/CoexpressionNetw
 library(WGCNA)
 options(stringsAsFactors = F)
 
+# Load phenotype data
 phenotype.datatfile <- '../dataset.phenotype.Svenson_DO_HFD.v12.Rds'
 all.phenotype.data <- readRDS(phenotype.datatfile)
 annotation <- all.phenotype.data$annot.samples[c('mouse.id','sex','diet')]
@@ -59,24 +63,25 @@ phenotype.data <-
   phenotype.data %>%
   left_join(annotation,by='mouse.id')
   
+# Load expression data
 expression.datatfile <- '../dataset.mrna.Svenson_DO_HFD.v12.Rds'
 expression.data <- readRDS(expression.datatfile)
 mrna.data <-
   expression.data$data$raw %>% as.data.frame
 
+# Check if all genes are ok, not too many missing values for genes or samples
 good.genes <- goodSamplesGenes(mrna.data)
-#check if all genes are ok, not too many missing values for genes or samples
 good.genes$allOK
 ```
 
 # Network Construction
 
 ```{r loading-datasets}
-nSets <- 4 #four datasets, NCD and HFD, male and female
+nSets <- 4 # Four datasets, NCD and HFD, male and female
 setLabels <- c("NCD-M","HFHS-M","NCD-F","HFHS-F")
-multiExpr=vector(mode="list",length=nSets) #create vector with two datasets
+multiExpr=vector(mode="list",length=nSets) # Create vector with two datasets
 
-#filter for only exprerssion data where we have appropriatet phenotype data
+# Filter for only expression data where we have appropriate phenotype data
 chow.mice.m <- phenotype.data %>% filter(diet=="chow"&sex=="M") %>% pull(mouse.id)
 hf.mice.m <- phenotype.data %>% filter(diet=="hf"&sex=="M") %>% pull(mouse.id)
 chow.mice.f <- phenotype.data %>% filter(diet=="chow"&sex=="F") %>% pull(mouse.id)
@@ -87,7 +92,7 @@ hf.expression.m <- mrna.data[hf.mice.m,] %>% na.omit
 chow.expression.f <- mrna.data[chow.mice.f,] %>% na.omit
 hf.expression.f <- mrna.data[hf.mice.f,] %>% na.omit
 
-# enter data on expression in to multiExpr object
+# Enter data on expression into multiExpr object
 multiExpr[[1]]=list(data=chow.expression.m)
 multiExpr[[2]]=list(data=hf.expression.m) 
 multiExpr[[3]]=list(data=chow.expression.f)
@@ -96,11 +101,10 @@ multiExpr[[4]]=list(data=hf.expression.f)
 exprSize <- checkSets(multiExpr)
 gsg <- goodSamplesGenesMS(multiExpr)
 
-
-# remove genes with too many missing values or no variance
+# Remove genes with too many missing values or no variance
 if (!gsg$allOK)
 {
-  # Print information about the removed genes:
+  # Print information about the removed genes
   if (sum(!gsg$goodGenes) > 0)
     printFlush(paste("Removing genes:", paste(names(multiExpr[[1]]$data)[!gsg$goodGenes], 
                                               collapse = ", ")))
@@ -120,35 +124,34 @@ if (!gsg$allOK)
 ## Clustering Expression Datasets
 
 ```{r diet-clustered-trees}
-#crerate two sample trees
+# Create sample trees
 sampleTrees = list()
 for (set in 1:nSets)
 {
   sampleTrees[[set]] = hclust(dist(multiExpr[[set]]$data), method = "average")
 }
-#cluster genes in each set, make a hclust tree using "average" method
-for (set in 1:nSets)
+# Cluster genes in each set, make a hclust tree using "average" method
+for (set in 1:nSets) {
   plot(sampleTrees[[set]], 
-       main = paste("Sample clustering on all genes in",
-                    setLabels[set]),
+       main = paste("Sample clustering on all genes in", setLabels[set]),
        xlab="", 
        sub="", 
-       cex = 0.7);
+       cex = 0.7)
+}
 
-
-# Form a multi-set structure called Traits that will hold the clinical traits.
-Traits = vector(mode="list", length = nSets);
+# Form a multi-set structure called Traits that will hold the clinical traits
+Traits = vector(mode="list", length = nSets)
 for (set in 1:nSets)
 {
-  setSamples = rownames(multiExpr[[set]]$data);
-  traitRows = match(setSamples, rownames(phenotype.data));
-  Traits[[set]] = list(data = phenotype.data[traitRows,]);
-  rownames(Traits[[set]]$data) = rownames(phenotype.data[traitRows,]);
+  setSamples = rownames(multiExpr[[set]]$data)
+  traitRows = match(setSamples, rownames(phenotype.data))
+  Traits[[set]] = list(data = phenotype.data[traitRows,])
+  rownames(Traits[[set]]$data) = rownames(phenotype.data[traitRows,])
 }
-collectGarbage();
+collectGarbage()
 # Define data set dimensions
-nGenes = exprSize$nGenes;
-nSamples = exprSize$nSamples;
+nGenes = exprSize$nGenes
+nSamples = exprSize$nSamples
 ```
 
 The combined dataset includes `r nGenes` genes and `r nSamples` samples separated into `nSets` datasets (`r paste(setLabels, collapse=",")`).
@@ -157,74 +160,53 @@ The combined dataset includes `r nGenes` genes and `r nSamples` samples separate
 # Choose a set of soft-thresholding powers
 powers = seq(4,20,by=1)
 # Initialize a list to hold the results of scale-free analysis
-powerTables = vector(mode = "list", length = nSets);
+powerTables = vector(mode = "list", length = nSets)
 # Call the network topology analysis function for each set in turn
 for (set in 1:nSets)
   powerTables[[set]] = list(data = pickSoftThreshold(multiExpr[[set]]$data,
                                                      powerVector=powers,
-                                                     verbose = 2)[[2]]);
-collectGarbage();
-# Plot the results:
-colors = color.scheme
+                                                     verbose = 2)[[2]])
+collectGarbage()
 
-# Will plot these columns of the returned scale free analysis tables
+# Plot the results using ggplot2
+library(ggplot2)
 plotCols = c(2,5,6,7)
-colNames = c("Scale Free Topology Model Fit", "Mean connectivity", "Median connectivity",
-"Max connectivity");
-# Get the minima and maxima of the plotted points
-ylim = matrix(NA, nrow = 2, ncol = 4);
-for (set in 1:nSets)
-{
-  for (col in 1:length(plotCols))
-  {
-    ylim[1, col] = min(ylim[1, col], powerTables[[set]]$data[, plotCols[col]], na.rm = TRUE);
-    ylim[2, col] = max(ylim[2, col], powerTables[[set]]$data[, plotCols[col]], na.rm = TRUE);
+colNames = c("Scale Free Topology Model Fit", "Mean connectivity", "Median connectivity", "Max connectivity")
+
+# Prepare data for ggplot
+plotData <- data.frame()
+for (set in 1:nSets) {
+  for (col in 1:length(plotCols)) {
+    tempData <- data.frame(
+      Power = powerTables[[set]]$data[,1],
+      Value = if (col == 1) -sign(powerTables[[set]]$data[,3]) * powerTables[[set]]$data[,2] else powerTables[[set]]$data[,plotCols[col]],
+      Metric = colNames[col],
+      Set = setLabels[set]
+    )
+    plotData <- rbind(plotData, tempData)
   }
 }
-# Plot the quantities in the chosen columns vs. the soft thresholding power
-sizeGrWindow(8, 6)
-pdf(file = "scaleFreeAnalysis.pdf", wi = 8, he = 6)
-par(mfcol = c(2,2));
-par(mar = c(4.2, 4.2 , 2.2, 0.5))
-cex1 = 0.7;
-for (col in 1:length(plotCols)) for (set in 1:nSets)
-{
-  if (set==1)
-  {
-    plot(powerTables[[set]]$data[,1], -sign(powerTables[[set]]$data[,3])*powerTables[[set]]$data[,2],
-         xlab="Soft Threshold (power)",ylab=colNames[col],type="n", ylim = ylim[, col],
-         main = colNames[col]);
-    addGrid();
-  }
-  if (col==1)
-  {
-    text(powerTables[[set]]$data[,1], -sign(powerTables[[set]]$data[,3])*powerTables[[set]]$data[,2],
-         labels=powers,cex=cex1,col=colors[set]);
-  } else
-    text(powerTables[[set]]$data[,1], powerTables[[set]]$data[,plotCols[col]],
-         labels=powers,cex=cex1,col=colors[set]);
-  if (col==1)
-  {
-    legend("bottomright", legend = setLabels, col = colors, pch = 20) ;
-  } else
-    legend("topright", legend = setLabels, col = colors, pch = 20) ;
-}
-dev.off();
+
+# Plot using ggplot2
+ggplot(plotData, aes(x = Power, y = Value, color = Set)) +
+  geom_point() +
+  facet_wrap(~ Metric, scales = "free_y") +
+  theme_minimal() +
+  labs(title = "Scale-Free Topology Analysis", x = "Soft Threshold (power)", y = "")
 ```
 
-
 ```{r network-construction}
-network.power <- 15 #based on the max SFT R2 maximum
+network.power <- 15 # Based on the max SFT R2 maximum
 net <- blockwiseConsensusModules(
         multiExpr, 
         power = network.power, 
-        minModuleSize = 30, #default is 20, tutorial said 30
-        deepSplit = 2, #default
-        maxBlockSize = ncol(mrna.data), #total number of genes
+        minModuleSize = 30, # Default is 20, tutorial said 30
+        deepSplit = 2, # Default
+        maxBlockSize = ncol(mrna.data), # Total number of genes
         pamRespectsDendro = FALSE, 
         mergeCutHeight = 0.25,
         numericLabels = TRUE,
-        minKMEtoStay = 0.1, #default is 0.2, tutorial said 0.1
+        minKMEtoStay = 0.1, # Default is 0.2, tutorial said 0.1
         saveTOMs = TRUE, 
         verbose = 1)
 ```
@@ -234,26 +216,97 @@ Constructed modules with `r network.power` soft-thresholding power, based on the
 ## Plotting Samples Clustered by Consensus Modules
 
 ```{r wgcna-dendrograms-by-modules}
-
 consMEs = net$multiMEs
 moduleLabels = net$colors
 # Convert the numeric labels to color labels
 moduleColors = labels2colors(moduleLabels)
-consTree = net$dendrograms[[1]]
 
-# Convert labels to colors for plotting
-mergedColors = labels2colors(net$colors)
-# Plot the dendrogram and the module colors underneath
-plotDendroAndColors(net$dendrograms[[1]], mergedColors[net$blockGenes[[1]]],
-                    "Module colors",
-                    dendroLabels = FALSE, hang = 0.03,
-                    addGuide = TRUE, guideHang = 0.05)
+# Loop through each dataset and plot its dendrogram
+for (set in 1:nSets) {
+  consTree = net$dendrograms[[set]]
+  mergedColors = labels2colors(net$colors)
+  plotDendroAndColors(consTree, mergedColors[net$blockGenes[[set]]],
+                      main = paste("Dendrogram and module colors for", setLabels[set]),
+                      "Module colors",
+                      dendroLabels = FALSE, hang = 0.03,
+                      addGuide = TRUE, guideHang = 0.05)
+}
 
-# Convert labels to colors for plotting
-mergedColors = labels2colors(net$colors)
+MEs = net$MEs
+geneTree = net$dendrograms[[1]]
+```
 
-MEs = net$MEs;
-geneTree = net$dendrograms[[1]];
+## Correlating Module Eigengenes with Phenotypes
+
+```{r correlate-modules-phenotypes}
+# Calculate module eigengenes
+MEs = moduleEigengenes(multiExpr[[1]]$data, moduleColors)$eigengenes
+MEs = orderMEs(MEs)
+
+# Calculate correlation between module eigengenes and phenotypes
+moduleTraitCor = cor(MEs, Traits[[1]]$data, use = "p")
+moduleTraitPvalue = corPvalueStudent(moduleTraitCor, nSamples)
+
+# Visualize the correlation as a heatmap
+library(pheatmap)
+pheatmap(moduleTraitCor, 
+         cluster_rows = TRUE, 
+         cluster_cols = TRUE, 
+         display_numbers = TRUE, 
+         main = "Module-Trait Relationships")
+
+# Identify key genes (hub genes) in significant modules
+significantModules = names(which(apply(moduleTraitPvalue, 1, min) < 0.05))
+hubGenes = list()
+for (module in significantModules) {
+  moduleGenes = which(moduleColors == module)
+  geneModuleMembership = cor(multiExpr[[1]]$data[, moduleGenes], MEs[, module], use = "p")
+  hubGenes[[module]] = names(sort(geneModuleMembership, decreasing = TRUE)[1:10])
+}
+
+# Print hub genes for significant modules
+hubGenes
+```
+
+## Correlating Module Eigengenes with Phenotype 'chol2'
+
+```{r correlate-modules-chol2}
+# Calculate module eigengenes
+MEs = moduleEigengenes(multiExpr[[1]]$data, moduleColors)$eigengenes
+MEs = orderMEs(MEs)
+
+# Extract the 'chol2' phenotype data
+chol2 = Traits[[1]]$data$chol2
+
+# Calculate correlation between module eigengenes and 'chol2' phenotype
+moduleChol2Cor = cor(MEs, chol2, use = "p")
+moduleChol2Pvalue = corPvalueStudent(moduleChol2Cor, nSamples)
+
+# Visualize the correlation as a bar plot
+library(ggplot2)
+chol2CorData <- data.frame(
+  Module = names(moduleChol2Cor),
+  Correlation = moduleChol2Cor,
+  Pvalue = moduleChol2Pvalue
+)
+
+ggplot(chol2CorData, aes(x = Module, y = Correlation, fill = Pvalue < 0.05)) +
+  geom_bar(stat = "identity") +
+  theme_minimal() +
+  labs(title = "Module-Trait Relationships with 'chol2'", x = "Module", y = "Correlation with 'chol2'") +
+  scale_fill_manual(values = c("TRUE" = "red", "FALSE" = "grey"), name = "Significant")
+
+# Identify key genes (hub genes) in significant modules
+significantModules = names(which(moduleChol2Pvalue < 0.05))
+hubGenes = list()
+for (module in significantModules) {
+  moduleGenes = which(moduleColors == module)
+  geneModuleMembership = cor(multiExpr[[1]]$data[, moduleGenes], MEs[, module], use = "p")
+  hubGenes[[module]] = names(sort(geneModuleMembership, decreasing = TRUE)[1:10])
+}
+
+# Print hub genes for significant modules
+hubGenes
 ```
 
 # Output
